--- a/dev/src/less/buttons.less
+++ b/dev/src/less/buttons.less
@@ -35,7 +35,9 @@
     border-radius: 0;
     color: @black;
     display: inline-flex;
-    font-size: 15px;
+    // AM Corrected font size
+    //font-size: 15px;
+    font-size:0.85em;
     font-weight: 400;
     height: 53px;
     justify-content: center;
