--- a/dev/style.css
+++ b/dev/style.css
@@ -3638,7 +3638,7 @@ input[type="button"].btn-block {
   border-radius: 0;
   color: #000000;
   display: inline-flex;
-  font-size: 15px;
+  font-size: 0.85em;
   font-weight: 400;
   height: 53px;
   justify-content: center;
