Added working triangle to square svg anim

--- a/dev/style.less
+++ b/dev/style.less
@@ -40,22 +40,15 @@
   animation-duration:0.4s;
 }
 
-.play-button {
+.video-button {
   
   display: inline-block;
-  -webkit-transition: all 0.5s ease;
+  -webkit-transition: stroke-dashoffset 0.5s ease;
   
-  .triangle {
-    -webkit-transition: all 0.7s ease-in-out;
-   }
-  
+
   
   &:hover {
     
-    .triangle {
-      stroke-dashoffset: 0;
-      opacity: 1;
-    }
       
     
     .circle {
@@ -65,7 +58,69 @@
     
   }
 }
-  
+
+.sound {
+  position: relative;
+  cursor: pointer;
+  display: inline-block;
+
+  &--icon {
+    color: #fff;
+    width: 75%;
+    height: 100%;
+    line-height: 100%;
+    display: block;
+    margin: auto;
+  }
+
+  &--wave {
+    position: absolute;
+    border: 7px solid transparent;
+    border-right: 7px solid #fff;
+    border-radius: 50%;
+    -webkit-transition: all 200ms;
+    transition: all 200ms;
+    margin: auto;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+  }
+
+  &--wave_one {
+    width: 40%;
+    height: 40%;
+  }
+
+  &--wave_two {
+    width: 60%;
+    height: 60%;
+  }
+
+  &-mute .sound--wave {
+    border-radius: 0;
+    width: 50%;
+    height: 50%;
+    border-width: 0 14px 0 0;
+
+    &_one {
+
+    -webkit-transform: rotate(45deg) translate3d(0, -25%, 0) scale(0.5);
+            transform: rotate(45deg) translate3d(0, -25%, 0) scale(0.5);
+    }
+
+    &_two {
+      -webkit-transform: rotate(-45deg) translate3d(0, 25%, 0) scale(0.5);
+              transform: rotate(-45deg) translate3d(0, 25%, 0) scale(0.5);
+    }
+  }
+}
+
+
+
+
+
+
 
   
   
