--- a/dev/style.css
+++ b/dev/style.css
@@ -55,18 +55,59 @@
   -moz-animation-duration: 0.4s;
   animation-duration: 0.4s;
 }
-.play-button {
+.video-button {
   display: inline-block;
-  -webkit-transition: all 0.5s ease;
+  -webkit-transition: stroke-dashoffset 0.5s ease;
 }
-.play-button .triangle {
-  -webkit-transition: all 0.7s ease-in-out;
-}
-.play-button:hover .triangle {
+.video-button:hover .circle {
   stroke-dashoffset: 0;
   opacity: 1;
 }
-.play-button:hover .circle {
-  stroke-dashoffset: 0;
-  opacity: 1;
+.sound {
+  position: relative;
+  cursor: pointer;
+  display: inline-block;
+}
+.sound--icon {
+  color: #fff;
+  width: 75%;
+  height: 100%;
+  line-height: 100%;
+  display: block;
+  margin: auto;
+}
+.sound--wave {
+  position: absolute;
+  border: 7px solid transparent;
+  border-right: 7px solid #fff;
+  border-radius: 50%;
+  -webkit-transition: all 200ms;
+  transition: all 200ms;
+  margin: auto;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+.sound--wave_one {
+  width: 40%;
+  height: 40%;
+}
+.sound--wave_two {
+  width: 60%;
+  height: 60%;
+}
+.sound-mute .sound--wave {
+  border-radius: 0;
+  width: 50%;
+  height: 50%;
+  border-width: 0 14px 0 0;
+}
+.sound-mute .sound--wave_one {
+  -webkit-transform: rotate(45deg) translate3d(0, -25%, 0) scale(0.5);
+  transform: rotate(45deg) translate3d(0, -25%, 0) scale(0.5);
+}
+.sound-mute .sound--wave_two {
+  -webkit-transform: rotate(-45deg) translate3d(0, 25%, 0) scale(0.5);
+  transform: rotate(-45deg) translate3d(0, 25%, 0) scale(0.5);
 }
